fix: display information HTML-markup when information__bombs-count/information__timer in overflowed

--- a/src/components/Interface/interface.scss
+++ b/src/components/Interface/interface.scss
@@ -3,6 +3,7 @@
 // /. imports
 
 .information {
+    position: relative;
     display: flex;
     justify-content: space-between;
     padding: 14px;
@@ -22,8 +23,8 @@
         height: 45px;
 
         span {
-            padding: 0 2px;
             display: flex;
+            padding: 0 2px;
             width: 100%;
             height: 100%;
             color: $red-color;
@@ -38,14 +39,38 @@
         }
     }
 
+    &__bombs-count span,
+    &__timer span {
+        max-width: 250px;
+        overflow-x: scroll;
+        overflow-y: hidden;
+
+        &::-webkit-scrollbar {
+            width: 0;
+            height: 0;
+        }
+
+        &::-webkit-scrollbar-track {
+            background-color: #DFDFDF;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: #B8C0C1;
+            box-shadow: inset -1px -1px 0px #0A0A0A, inset 1px 1px 0px $white-color, inset -2px -2px 0px $dark-gray-color, inset 2px 2px 0px #DFDFDF;
+        }
+    }
+
     &__status {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         border-top: 1px solid $white-color;
         border-left: 1px solid $white-color;
         border-bottom: 1px solid $dark-color;
         border-right: 1px solid $dark-color;
         width: 45px;
         height: 45px;
-        margin: 0 25px;
 
         button {
             display: flex;
